2003-03-06  Pascal Obry  <p.obry@wanadoo.fr>

	* makefile:
	(WSDL_TESTS): New variable.
	(test_wsdl): Remove this target.
	(WSDL_TESTS): New target for all WSDL tests.

	* test_wsdl2.adb, test_wsdl2.out, test_wsdl2.wsdl:
	Initial revision.

	* hello.wsdl:
	File renamed test_wsdl.wsdl.

2003-03-05  Pascal Obry  <p.obry@wanadoo.fr>

	* makefile:
	Move test_wsdl from RT_SOAP to OTH_TESTS.
	
2003-03-05  Pascal Obry  <p.obry@wanadoo.fr>

	* makefile:
	(RT_SOAP): Add test_wsdl.
	(test_wsdl): New target.
	(clean): Remove files generated from WSDL document.
	Minor comment fix.

	* test_wsdl.adb, test_wsdl.out, hello.wsdl:
	Initial revision.

	* check_mem.adb:
	Add check for non existent template file.

2003-03-04  Pascal Obry  <p.obry@wanadoo.fr>

	* makefile:
	(RT_STD): Remove dirop.
	(OTH_TESTS): Add dirop.
	(dirop): New target.

	* dirop.out:
	Remove CVS/ from output as this is not present outside the CVS
	 directory.

2003-03-03  Dmitriy Anisimkov  <anisimkov@yahoo.com>

	* hval.adb, hval.out:
	Test for the empty Header_Value parameter.

2003-03-02  Dmitriy Anisimkov  <anisimkov@yahoo.com>

	* hval.adb, hval.out:
	Test for the Unnamed_Value_Exists routine.

2003-02-10  Pascal Obry  <p.obry@wanadoo.fr>

	* makefile:
	(check_mem): Keep run's output for debugging purpose.
	(clean): Add run? and check_mem.run?

2003-02-10  Pascal Obry  <p.obry@wanadoo.fr>

	* check_mem.adb:
	(Check): Output all data to ease debugging if necessary.
	(Server): Allow more time for the requests.
	Add check for templates.

	* check_mem.tmplt:
	Initial revision.

	* makefile:
	(ALL_TESTS): Renamed to STD_TESTS.
	(OTH_TESTS): New target.
	(build): Remove specific test, add OTH_TESTS variable.

2003-02-08  Pascal Obry  <p.obry@wanadoo.fr>

	* check_mem.adb:
	Add some SOAP requests to check the SOAP API memory usage.

2003-02-08  Dmitriy Anisimkov  <anisimkov@yahoo.com>

	* tlog.adb:
	(Today): Constant instead or routine.

	* tlog.out:
	Update line numbers in exception messages.
